# nzbindexer

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  INSTALLATION.md  README.md  ROADMAP.md  add_binary_groups.py  add_default_categories.py  change_admin_password.py  clean_releases.py  diagnose_releases.py  docker-compose.yml  examine_articles.py  fix_article_processing.py  fix_binary_detection.py  fix_binary_detection_complete.py  fix_database_locks.py  fix_obfuscated_binaries.py  fix_obfuscated_binaries_simple.py  install-podman.sh  install.sh  pyproject.toml  requirements.txt  reset_group_articles.py  test_article_processing.py  test_backfill_direct.py  test_nntp_connection.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  auth.py  categories.py  groups.py  nntp.py  orn.py  releases.py  users.py
app/core/: __init__.py  config.py  logging.py  security.py  tasks.py
app/db/: __init__.py  init_db.py  session.py
app/db/models/: __init__.py  base.py  category.py  group.py  orn_mapping.py  release.py  release_regex.py  setting.py  user.py
app/schemas/: __init__.py  admin.py  category.py  group.py  newsgroup_discovery.py  release.py  setting.py  token.py  user.py
app/services/: __init__.py  article.py  category.py  deobfuscation.py  group.py  metadata.py  newznab.py  nntp.py  nzb.py  nzbhydra.py  predb.py  regex_matcher.py  release.py  setting.py  user.py
app/web/: filters.py
app/web/static/css/: styles.css
app/web/static/js/: api-auth.js  main.js
app/web/templates/: api_keys.html  base.html  browse.html  group_detail.html  groups.html  login.html  profile.html  register.html  release_detail.html
app/web/templates/admin/: categories.html  group_form.html  groups.html  settings.html
config/: apache.conf  nginx.conf
docs/: DEOBFUSCATION_RESOURCES.md  DEOBFUSCATION_STATUS.md  NNTMUX_ANALYSIS.md  ORN_DATABASE_GUIDE.md
scripts/: add_backfill_days_column.py  deploy.sh  migrate_release_regexes.py  reprocess_obfuscated_releases.py  seed_orn_cache.py  seed_release_regexes.py  setup_nzbhydra2.sh  utils.sh  validate.sh
scripts/archived/: README.md  add_newznab_category.py  comprehensive_fix.py  debug_article_processing.py  diagnose_releases.py  direct_fix.py  direct_process_articles.py  fix_article_skipping.py  install.sh  nzbindexer_fix.py  process_group_direct.py  test_article_retrieval.py
