[tool.poetry]
name = "nzbindexer"
version = "1.0.0"
description = "A modern Usenet indexer using FastAPI, SQLAlchemy, and modern Python practices"
authors = ["Johan Sebastiaan <johansebastiaan@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.12"
jinja2 = "^3.1.4"
celery = "^5.4.0"
redis = "^5.2.0"
httpx = "^0.28.0"
pillow = "^11.0.0"
aiofiles = "^24.1.0"
email-validator = "^2.2.0"
python-dotenv = "^1.0.1"
itsdangerous = "^2.2.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
